--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,7 +10,11 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
+        bind:
+            $emailTranslatorDomain: 'emails+intl-icu'
+            $tokenSecret: '%env(SWD_TOKEN_SECRET)%'
+            $accessTokenTtl: '%env(duration:SWD_ACCESS_TOKEN_TTL)%'
+            $refreshTokenTtl: '%env(duration:SWD_REFRESH_TOKEN_TTL)%'
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -23,3 +27,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Infra\EventListener\ErrorListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception }
