--- a/.env
+++ b/.env
@@ -26,6 +26,8 @@ SWD_TOKEN_SECRET=secret
 SWD_ACCESS_TOKEN_TTL="1 day"
 SWD_REFRESH_TOKEN_TTL="90 days"
 
+SWD_MAILER_PORT=1025
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=a0fe7d562efe1ee0dea79514167d363a
@@ -41,7 +43,7 @@ APP_SECRET=a0fe7d562efe1ee0dea79514167d363a
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost:1025
+MAILER_DSN=smtp://localhost:${SWD_MAILER_PORT}
 ###< symfony/mailer ###
 
 ###> symfony/messenger ###
