--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/redis-messenger": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/security-bundle": "6.0.*",
+        "symfony/serializer": "6.0.*",
         "symfony/validator": "6.0.*",
         "symfony/yaml": "6.0.*"
     },
