--- a/.env
+++ b/.env
@@ -28,6 +28,10 @@ SWD_REFRESH_TOKEN_TTL="90 days"
 
 SWD_MAILER_PORT=1025
 
+SWD_CENTRIFUGO_API_KEY=f8e18ca4-ae9d-4ecb-ac51-493612800a73
+SWD_CENTRIFUGO_API_ENDPOINT=http://localhost:8000/api
+SWD_CENTRIFUGO_SECRET=${SWD_TOKEN_SECRET}
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=a0fe7d562efe1ee0dea79514167d363a
