--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/framework-bundle": "6.0.*",
         "symfony/mailer": "6.0.*",
         "symfony/messenger": "6.0.*",
+        "symfony/property-info": "6.0.*",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/redis-messenger": "6.0.*",
         "symfony/runtime": "6.0.*",
